--- a/package.json
+++ b/package.json
@@ -15,14 +15,21 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
-    "concurrently": "^8.0.1",
-    "eslint": "8.40.0",
+    "concurrently": "^8.2.2",
     "eslint-config-next": "13.4.2",
+    "glob": "^11.0.0",
+    "inflight": "^1.0.6",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/lodash-es": "^4.17.12",
+    "clsx": "^2.1.1",
+    "eslint": "^9.17.0",
+    "lodash-es": "^4.17.21"
   }
 }
