--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,12 @@
 # dependencies
 /node_modules
 /.pnp
-.pnp.js
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
 # testing
 /coverage
@@ -17,6 +22,8 @@
 
 # misc
 .DS_Store
+*.swp
+*.swo
 *.pem
 
 # debug
@@ -34,3 +41,9 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 __pycache__
+
+notes.txt
+
+# python
+*.pyc
+.python-version
